# generate-labels

./: .gitignore  README.md  generate-labels.cabal
lib/Data/OverloadedLabels/: TH.hs
src/: Main.hs
test/: Main.hs
