name:           generate-labels
version:        0.1.0.1
author:         d86leader
maintainer:     d86leader@mail.com
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: lib
  build-depends: base
               , template-haskell
  exposed-modules: Data.OverloadedLabels.TH
  default-language: Haskell2010

test-suite app-exe
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , generate-labels
  default-language: Haskell2010
